// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`insights formatInsightsMessage should format complete message with all options 1`] = `
"<b>Monthly Insights - January 2024</b>

Expenses: <b>5,432.50</b> ILS
Income: <b>8,000.00</b> ILS
Balance: <b>+2,567.50</b> ILS

Daily avg: <b>301.81</b> ILS/day (18 days)

<b>Top Categories</b>
  Groceries: 1,500.00 ILS (27.6%)
  Transportation: 800.00 ILS (14.7%)
  Restaurants: 650.00 ILS (12.0%)
  Utilities: 450.00 ILS (8.3%)
  Entertainment: 320.00 ILS (5.9%)"
`;

exports[`insights formatInsightsMessage should format negative balance correctly 1`] = `
"<b>Monthly Insights - January 2024</b>

Expenses: <b>10,000.00</b> ILS
Income: <b>5,000.00</b> ILS
Balance: <b>-5,000.00</b> ILS"
`;

exports[`insights formatInsightsMessage should handle empty category breakdown 1`] = `
"<b>Monthly Insights - January 2024</b>

Expenses: <b>0.00</b> ILS
Income: <b>8,000.00</b> ILS
Balance: <b>+2,567.50</b> ILS"
`;

exports[`insights formatInsightsMessage should hide categories when disabled 1`] = `
"<b>Monthly Insights - January 2024</b>

Expenses: <b>5,432.50</b> ILS
Income: <b>8,000.00</b> ILS
Balance: <b>+2,567.50</b> ILS

Daily avg: <b>301.81</b> ILS/day (18 days)"
`;

exports[`insights formatInsightsMessage should hide daily average when disabled 1`] = `
"<b>Monthly Insights - January 2024</b>

Expenses: <b>5,432.50</b> ILS
Income: <b>8,000.00</b> ILS
Balance: <b>+2,567.50</b> ILS"
`;

exports[`insights formatInsightsMessage should limit categories to maxCategories 1`] = `
"<b>Monthly Insights - January 2024</b>

Expenses: <b>5,432.50</b> ILS
Income: <b>8,000.00</b> ILS
Balance: <b>+2,567.50</b> ILS

<b>Top Categories</b>
  Groceries: 1,500.00 ILS (27.6%)
  Transportation: 800.00 ILS (14.7%)
  Restaurants: 650.00 ILS (12.0%)"
`;

exports[`insights formatInsightsMessage should use default options when not provided 1`] = `
"<b>Monthly Insights - January 2024</b>

Expenses: <b>5,432.50</b> ILS
Income: <b>8,000.00</b> ILS
Balance: <b>+2,567.50</b> ILS

Daily avg: <b>301.81</b> ILS/day (18 days)

<b>Top Categories</b>
  Groceries: 1,500.00 ILS (27.6%)
  Transportation: 800.00 ILS (14.7%)
  Restaurants: 650.00 ILS (12.0%)
  Utilities: 450.00 ILS (8.3%)
  Entertainment: 320.00 ILS (5.9%)"
`;
